force-app/main/default/objects/Powerparts_Service_Request_Team__c/Powerparts_Service_Request_Team__c.object-meta.xml
<CustomObject>
    <label>Powerparts Service Request Team</label>
    <nameField>
        <displayFormat>Team-{0000}</displayFormat>
        <label>Service Team</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Powerparts Service Request Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>