force-app/main/default/objects/Powerparts_Service_Request_Team__c/fields/Engineer1__c.field-meta.xml
<CustomField>
    <fullName>Engineer1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Engineer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Service Engineer</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Service Manager</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Branch Manager</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>A&amp;I Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Powerparts_Service_Request_Team</relationshipName>
    <type>Lookup</type>
</CustomField>