force-app/main/default/objects/Powerparts_Service_Request_Team__c/fields/Engineer1_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Engineer1_Check_In__c</fullName>
    <label>Engineer1 Check In</label>
    <type>DateTime</type>
</CustomField>