force-app/main/default/objects/Powerparts_Service_Request_Team__c/fields/Engineer2__c.field-meta.xml
<CustomField>
    <fullName>Engineer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Service Engineer</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Service Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Powerparts_Service_Request_Team1</relationshipName>
    <type>Lookup</type>
</CustomField>