force-app/main/default/objects/Powerparts_Service_Request_Team__c/fields/Engineer2_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Engineer2_Check_In__c</fullName>
    <label>Engineer2 Check In</label>
    <type>DateTime</type>
</CustomField>