force-app/main/default/objects/Powerparts_Service_Request_Team__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Powerparts Service Request Team</relationshipLabel>
    <relationshipName>Powerparts_Service_Request_Team</relationshipName>
    <type>Lookup</type>
</CustomField>