force-app/main/default/objects/Powerparts_Service_Request_Team__c/validationRules/Primary_Engineer_will_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Engineer_will_not_be_changed</fullName>
    <active>true</active>
    <description>Primary Engineer will not be changed once it assigns.</description>
    <errorConditionFormula>ISCHANGED( Engineer1__c )</errorConditionFormula>
    <errorDisplayField>Engineer1__c</errorDisplayField>
    <errorMessage>Primary Engineer will not be changed once it assigns</errorMessage>
</ValidationRule>