force-app/main/default/objects/Powerparts_Service_Request_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engineer1_Check_In__c</columns>
    <columns>Engineer1_Check_Out__c</columns>
    <columns>Engineer2_Check_In__c</columns>
    <columns>Engineer2_Check_Out__c</columns>
    <columns>Engineer3_Check_In__c</columns>
    <columns>Engineer3_Check_Out__c</columns>
    <columns>Engineer4_Check_In__c</columns>
    <columns>Engineer4_Check_Out__c</columns>
    <filterScope>Everything</filterScope>
    <label>Team Deatails</label>
</ListView>